implement user CRUD operations with swagger final commit
