# src/api-documentation/swagger.yaml
@@ -60,6 +60,93 @@ paths:
         '500':
           description: Internal server error
 
+
+  /api/users:
+    get:
+      tags: [User]
+      summary: Get all users
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of users
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserListResponse'
+        '500':
+          description: Internal server error
+
+  /api/users/{id}:
+    get:
+      tags: [User]
+      summary: Get a user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: User details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
+
+    put:
+      tags: [User]
+      summary: Update a user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUser'
+      responses:
+        '200':
+          description: User updated successfully
+        '400':
+          description: Bad request
+        '404':
+          description: User not found
+        '403':
+          description: Forbidden
+        '500':
+          description: Internal server error
+
+    delete:
+      tags: [User]
+      summary: Delete a user by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '204':
+          description: User deleted successfully
+        '404':
+          description: User not found
+        '403':
+          description: Forbidden
+        '500':
+          description: Internal server error
+
   /api/categories:
     post:
       tags: [Category]
@@ -513,6 +600,42 @@ components:
       required:
         - email
         - password
+
+    UpdateUser:
+      type: object
+      properties:
+        firstName:
+          type: string
+          example: 'John'
+        lastName:
+          type: string
+          example: 'Doe'
+        email:
+          type: string
+          format: email
+          example: 'john_doe_updated@example.com'
+        dateOfBirth:
+          type: string
+          format: date
+          example: '1990-01-01'
+    UserListResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/UserResponse'
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: 'e1e2e3e4-e5e6-e7e8-e9e0-e1e2e3e4e5e6'
+        username:
+          type: string
+          example: 'johndoe'
+        email:
+          type: string
+          format: email
+          example: 'johndoe@example.com'
 
     CreateNewCategory:
       type: object
